titulo de obras participando e ajuste de contato

--- a/contato.html
+++ b/contato.html
@@ -34,8 +34,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=VLhusP">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=VLhusP" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=bolzKH">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=bolzKH" type="text/css">
 
 
 
@@ -86,7 +86,8 @@
                             target="_blank">
                             <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
                         </a>
-                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/"
+                        <a class="iconfont-wrapper"
+                            href="https://www.instagram.com/triade.construtora?igsh=MWg2ZTJybzNhYmJ3bQ%3D%3D&utm_source=qr"
                             target="_blank">
                             <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
                         </a>
@@ -97,27 +98,6 @@
                 </div>
             </div>
         </nav>
-    </section>
-
-    <section data-bs-version="5.1" class="map1 cid-ukxowqXZ5K" id="map01-19">
-
-
-
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 content-head">
-                    <div class="mbr-section-head mb-5">
-                        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Nosso
-                                Local</strong></h3>
-                        <h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-5">
-                            Cuiabá ...</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="google-map"><iframe frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21181.842311652297!2d-56.103412103038856!3d-15.58831029602441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x939db1b12693047f%3A0x6df31de56541b025!2sChurrascaria%20Nativas%20Grill%20%7C%20Cuiab%C3%A1%20%7C%20Restaurante%20%7C%20Rod%C3%ADzio!5e0!3m2!1spt-BR!2sbr!4v1722823370954!5m2!1spt-BR!2sbr"
-                    allowfullscreen=""></iframe></div>
-        </div>
     </section>
 
     <section data-bs-version="5.1" class="contacts01 cid-ukxovlcD2g" id="contacts01-18">
@@ -157,6 +137,19 @@
                             </h6>
                             <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:triiadeconstrutora@gmail.com"
                                     class="text-primary">triiadeconstrutora@gmail.com</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item features-without-image col-12 col-md-6">
+                    <div class="item-wrapper">
+                        <div class="text-wrapper">
+                            <h6 class="card-title mbr-fonts-style mb-3 display-5">
+                                <strong>Instagram</strong>
+                            </h6>
+                            <p class="mbr-text mbr-fonts-style display-7"><a
+                                    href="https://www.instagram.com/triade.construtora?igsh=MWg2ZTJybzNhYmJ3bQ%3D%3D&utm_source=qr"
+                                    class="text-primary" target="_blank">@triade.construtora</a>
                             </p>
                         </div>
                     </div>
