--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=beF2xJ">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=beF2xJ" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=4UFAuM">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=4UFAuM" type="text/css">
 
 
 
@@ -86,7 +86,9 @@
               target="_blank">
               <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
             </a>
-            <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/" target="_blank">
+            <a class="iconfont-wrapper"
+              href="https://www.instagram.com/triade.construtora?igsh=MWg2ZTJybzNhYmJ3bQ%3D%3D&utm_source=qr"
+              target="_blank">
               <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
             </a>
 
@@ -182,16 +184,17 @@
       <div class="grid-container">
         <div class="grid-container-3 moving-left" style="transform: translate3d(-200px, 0px, 0px);">
           <div class="grid-item">
-            <img src="assets/images/img-20240804-wa0030.jpeg" alt="Tríade">
+            <img src="assets/images/img-20240804-wa0030.jpeg" alt="">
           </div>
           <div class="grid-item">
-            <img src="assets/images/img-20240804-wa0092.jpeg" alt="Tríade">
+            <img src="assets/images/img-20240804-wa0092.jpeg" alt="">
           </div>
           <div class="grid-item">
-            <img src="assets/images/imagem-do-whatsapp-de-2024-08-13-s-12.43.36-ae869d6e.jpeg" alt="Tríade">
+            <img src="assets/images/imagem-do-whatsapp-de-2024-08-13-s-12.43.36-ae869d6e.jpeg"
+              alt="">
           </div>
           <div class="grid-item">
-            <img src="assets/images/img-20240804-wa0064.jpg" alt="Tríade">
+            <img src="assets/images/img-20240804-wa0064.jpg" alt="">
           </div>
         </div>
       </div>
@@ -264,8 +267,8 @@
       <div class="row justify-content-center mb-5">
         <div class="col-12 content-head">
           <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Algumas de Nossas
-                Obras</strong></h4>
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Algumas de Obras Que
+                Participamos</strong></h4>
 
           </div>
         </div>
@@ -274,7 +277,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0095.jpg" alt="Tríade" title="" data-slide-to="0"
+              <img src="assets/images/img-20240804-wa0095.jpg" alt="" title="" data-slide-to="0"
                 data-bs-slide-to="0">
             </div>
             <div class="item-content align-left">
@@ -291,8 +294,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3 active">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/imagem-do-whatsapp-de-2024-08-05-s-22.24.35-45ff542b.jpg" alt="Tríade" title=""
-                data-slide-to="1" data-bs-slide-to="1">
+              <img src="assets/images/imagem-do-whatsapp-de-2024-08-05-s-22.24.35-45ff542b.jpg"
+                alt="" title="" data-slide-to="1" data-bs-slide-to="1">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -308,8 +311,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0114.jpeg" alt="Tríade" title="" data-slide-to="2"
-                data-bs-slide-to="2">
+              <img src="assets/images/img-20240804-wa0114.jpeg" alt="" title=""
+                data-slide-to="2" data-bs-slide-to="2">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">
@@ -325,7 +328,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0065.jpg" alt="Tríade" title="" data-slide-to="3"
+              <img src="assets/images/img-20240804-wa0065.jpg" alt="" title="" data-slide-to="3"
                 data-bs-slide-to="3">
             </div>
             <div class="item-content align-left">
@@ -341,7 +344,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0150.jpg" alt="Tríade" title="" data-slide-to="4"
+              <img src="assets/images/img-20240804-wa0150.jpg" alt="" title="" data-slide-to="4"
                 data-bs-slide-to="4">
             </div>
             <div class="item-content align-left">
@@ -358,7 +361,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0045.jpg" alt="Tríade" title="" data-slide-to="5"
+              <img src="assets/images/img-20240804-wa0045.jpg" alt="" title="" data-slide-to="5"
                 data-bs-slide-to="5">
             </div>
             <div class="item-content align-left">
@@ -373,7 +376,7 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/img-20240804-wa0037.jpg" alt="Tríade" title="" data-slide-to="6"
+              <img src="assets/images/img-20240804-wa0037.jpg" alt="" title="" data-slide-to="6"
                 data-bs-slide-to="6">
             </div>
             <div class="item-content align-left">
@@ -389,8 +392,8 @@
         <div class="item features-image col-12 col-md-6 col-lg-3">
           <div class="item-wrapper">
             <div class="item-img mb-3">
-              <img src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.08-61e34a08.jpg" alt="Tríade" title=""
-                data-slide-to="7" data-bs-slide-to="7">
+              <img src="assets/images/imagem-do-whatsapp-de-2024-08-20-s-16.37.08-61e34a08.jpg"
+                alt="" title="" data-slide-to="7" data-bs-slide-to="7">
             </div>
             <div class="item-content align-left">
               <h5 class="item-title mbr-fonts-style mb-3 mt-0 display-7">Diamantino - MT</h5>
