--- a/sobre.html
+++ b/sobre.html
@@ -35,8 +35,8 @@
 		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
 	</noscript>
-	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2CJeGn">
-	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2CJeGn" type="text/css">
+	<link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=GsnErE">
+	<link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=GsnErE" type="text/css">
 
 
 
@@ -87,7 +87,8 @@
 							target="_blank">
 							<span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
 						</a>
-						<a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/"
+						<a class="iconfont-wrapper"
+							href="https://www.instagram.com/triade.construtora?igsh=MWg2ZTJybzNhYmJ3bQ%3D%3D&utm_source=qr"
 							target="_blank">
 							<span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
 						</a>
@@ -118,15 +119,13 @@
 								<strong>hospitalares</strong>. Com um histórico impressionante de mais de <strong>15
 								</strong>projetos concluídos e mais de <strong>77.000</strong> metros quadrados
 								construídos, nossa empresa tem consolidado uma reputação sólida, fundamentada na
-								honestidade, qualidade e integridade.<br>
-							</p>
+								honestidade, qualidade e integridade.<br></p>
 							<div class="mbr-section-btn mt-4"><a class="btn btn-primary display-7"
 									href="sobre.html#article04-j">O que fazemos</a> <a
 									class="btn btn-primary-outline display-7" href="sobre.html#article02-k">Valores</a>
 								<a class="btn btn-primary display-7" href="sobre.html#article04-m">Compromisso</a> <a
 									class="btn btn-primary-outline display-7"
-									href="sobre.html#article02-n">Escolha-nos</a>
-							</div>
+									href="sobre.html#article02-n">Escolha-nos</a></div>
 						</div>
 					</div>
 				</div>
